syntax = "proto3";
package admin;

option go_package = "admin/v1;admin";

import "validate/validate.proto";

message ResourceListRequest{
  // Token 类型
  int32 page = 1 [(validate.rules).int32.gt = 0];
  // token
  int32 page_size = 2 [(validate.rules).int32.gt = 0];
  // 过期时间
  string uri = 3;
  string name = 4;
  int32 status = 5;
  int32 type = 6;
}

// 管理员登录接口请求参数
message ResourceListResponse{
  message Item{
    int32 id = 1;
    string name = 2;
    string uri = 4;
    int32 status = 7;
    string created_at = 8;
    string updated_at = 9;
    int32 type = 11;
  }

  repeated Item items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 page_total = 5;
}


message ResourceCreateRequest{
  string name = 1 [(validate.rules).string = {min_len: 1}];
  string uri = 2 [(validate.rules).string = {min_len: 1}];
  int32 type = 3 [(validate.rules).int32 = {in: [1, 2]}];
}

// 管理员登录接口请求参数
message ResourceCreateResponse{
  int32 id = 1;
}

message ResourceUpdateRequest{
  int32 id = 1 [(validate.rules).int32.gt = 0];
  string name = 2 [(validate.rules).string = {min_len: 1}];
  string uri = 3 [(validate.rules).string = {min_len: 1}];
  int32 status = 4 [(validate.rules).int32 = {in: [1, 2]}];
}

// 管理员登录接口请求参数
message ResourceUpdateResponse{
  int32 id = 1;
}

message ResourceDeleteRequest{
  int32 id = 1 [(validate.rules).int32.gt = 0];
  int32 status = 2 [(validate.rules).int32 = {in: [1, 2]}];
}

// 管理员登录接口请求参数
message ResourceDeleteResponse{
  int32 id = 1;
}